# omega-cyber

./: .gitignore  deploy.sh  run_all.sh
.github/workflows/: main.yml
AR-VR-interface/: package-lock.json  package.json
dashboard/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.css  App.tsx  dashboard.ts  index.css  main.tsx  test_dashboard.ts
dashboard/src/components/: ARVREnvironmentDashboard.tsx  NetworkTopologyDashboard.tsx  SimulationDashboard.tsx  SystemMonitoringDashboard.tsx  ThreatIntelligenceDashboard.tsx  WebGPUIntegrationConcept.tsx
dashboard/src/components/ai/: RenderStepExecution.tsx
dashboard/src/components/dashboards/: ARVREnvironmentDashboard.tsx  NetworkTopologyDashboard.tsx  SimulationDashboard.tsx  SystemMonitoringDashboard.tsx  ThreatIntelligenceDashboard.tsx  WebGPUIntegrationConcept.tsx
dashboard/src/components/pages/: SettingsPage.tsx
dashboard/src/data/: networkData.ts  simulationOutputs.ts  systemMetrics.ts  threatIntelligence.ts
deception-engine/: package-lock.json  package.json  tsconfig.json
deception-engine/src/: index.ts  simulation.py  test_index.ts  test_simulation.py
digital-twin/: requirements.txt
digital-twin/src/: test_unreal_bridge.py  unreal_bridge.py
digital-twin/src/cpp/: CMakeLists.txt
digital-twin/src/cpp/include/: AquaWarSDK.h
digital-twin/src/cpp/src/: AquaWarSDK.cpp  main.cpp
digital-twin/src/python/: wkv_model.py
docs/: README.md  architecture.md  e2e_test_scenario.md
docs/modules/: intelligence-core.md  mesh-network.md  sentinel-agents.md
human-threat-modeling/: requirements.txt
human-threat-modeling/src/: main.py  test_main.py
intelligence-core/: requirements.txt
intelligence-core/src/julia/: main.jl  test_main.jl
intelligence-core/src/python/: data_processing.py  evaluation.py  inference.py  main.py  test_main.py
mesh-network/: go.mod  main
mesh-network/elixir/elixir_mesh/: mix.exs
mesh-network/elixir/elixir_mesh/lib/: elixir_mesh.ex
mesh-network/elixir/elixir_mesh/test/: event_stream_test.exs  test_helper.exs
mesh-network/src/: main.go  main_test.go
mesh-network/src/cmd/mesh-node/: main.go
mesh-network/src/internal/config/: config.go  config_test.go
mesh-network/src/internal/grpc/: server.go
mesh-network/src/internal/p2p/: node.go  node_test.go
orchestration/: build.sbt  mix.exs
orchestration/lib/: orchestrator.ex
orchestration/src/main/scala/: Scheduler.scala
orchestration/src/test/scala/: SchedulerSpec.scala
orchestration/test/: orchestrator_test.exs
proto/: alert.proto  mesh.proto
scripting/: lua_wrapper.py  script.lua  test.lua
scripts/: build.sh  ci_tasks.py
sentinel-agents/: CMakeLists.txt  Cargo.toml  build.zig
sentinel-agents/src/: main.c  main.rs  main.zig  rust_agent_test.rs
trust-fabric/: Cargo.toml
trust-fabric/src/: blockchain_test.rs  lib.rs
wasm-modules/: Cargo.toml  build.sh
wasm-modules/src/: lib.rs  lib_test.rs
